<resources>

    <string name="app_name">Cinda</string>

    <!-- Parse -->
    <string name="parseApplicationID" translatable="false">GmZfs4Q3ispg7C5mrT5sfFk2PpPs0HXudLP7tkTr</string>
    <string name="parseClientKey" translatable="false">LjphrT3LxgdumkViIhKiQfnEapWJ63U5TrL9x4Zl</string>

    <!-- Request permissions -->
    <string name="permission_contacts_explanation">We need to know your mail so you can send contributions, do you agree?</string>
    <string name="permission_camera_and_storage">You need authorize some permissions to use the camera</string>
    <string name="permission_camera_and_storage_bad">To use this feature you must accept all permissions</string>
    <string name="permission_location">To use this feature, you must allow the use of location</string>

    <!-- activity_main -->
    <string name="app_advice">Start using Cinda!</string>
    <string name="app_advice_desc">Discover and contributes Cinda campaigns providing your email</string>
    <string name="activate">Activate</string>
    <string name="noConnection">No connection, certain functions are disabled</string>

    <!-- menu_main -->
    <string name="action_sync">Synchronize</string>
    <string name="action_servers">Servers</string>
    <string name="action_about">About</string>

    <!-- menu_contribution -->
    <string name="action_send">Send</string>

    <!-- menu_campaign -->
    <string name="action_tracking">Record route</string>

    <!-- menu init, pause, continue, stop -->
    <string name="action_init">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_continue">Continue</string>
    <string name="action_stop">Stop</string>

    <!-- menu_dictionary -->
    <string name="action_search">Search</string>
    <string name="search_hint">Search in dictionary</string>

    <!-- item_campaign -->
    <string name="suscribe">Subscribe</string>
    <string name="unsuscribe">Stop following</string>

    <!-- campaign -->
    <string name="campaignDateTitle">DATES</string>
    <string name="campaignGeoTitle">GEOGRAPHIC AMBIT</string>

    <string name="campaign_my_data">MY CONTRIBUTIONS</string>
    <string name="campaign_desc" translatable="false"> </string>
    <string name="campaign_date" translatable="false"> </string>
    <string name="campaign_geo" translatable="false"> </string>

    <string name="continue_reading">Continue reading</string>
    <string name="my_contribute">You have not made any contribution</string>
    <string name="other_contribute">Nobody has contributed anything yet</string>

    <string name="moreUsers" translatable="false"> </string>

    <string name="viewMore">See more</string>
    <string name="viewLess">Show less</string>
    
    <!-- Map -->
    <string name="map_title">Geolocation</string>
    <string name="action_map_ok">OK</string>

    <!-- Servers -->
    <string name="titleServers">CINDA Servers</string>
    <string name="defaultServer">http://virde.dev.si2soluciones.es</string>
    <string name="defaultDescServer">Cinda default server. Discover campaigns and provides your contribution.</string>
    <string name="serverNoDesc">Server without description.</string>
    <string name="isDefaultServer">isDefaultServer</string>
    <string name="delete_text">Are you sure you want to delete this server?</string>
    <string name="new_server">New server</string>
    <string name="example_server">Example: www.cinda.science</string>
    <string name="help_server">No es necesario que incluyas \"http://\"</string>
    <string name="desc_server">Description server</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="sendAgain">Try again</string>
    <string name="completeAll">Complete the server URL</string>
    <string name="invalidUrl">The server provided is incorrect</string>
    <string name="checkingServer">Connecting to new server&#8230;</string>

    <!-- DictionaryValue -->
    <string name="select">SELECT</string>
    <string name="dictionary">Dictionary</string>

    <!-- contribution -->
    <string name="contribution">Contribution</string>
    <string name="contribution_title">New contribution</string>
    <string name="loading">Loading campaigning model</string>
    <string name="sendingContribution">Sending your contribution&#8230;</string>
    <string name="contributionSended">contribution sent</string>
    <string name="contributionNoSend">Unable to send the contribution. Your contribution has been saved for later synchronization from the \"Sync\" option".</string>
    <string name="myShipments">MY SENDINGS</string>
    <string name="other">OTHER</string>
    <string name="selectLocation">Active Settings > Ubication\nor select by clicking here</string>
    <string name="addImage">Add image</string>
    <string name="more_info">+Info</string>
    <string name="dialog_required_fields">Complete all required fields highlighted in red to submit your contribution.</string>
    <string name="no_description">Without description</string>
    <string name="noContributions">Contributions unavailable</string>

    <!-- recycler_topusers -->
    <string name="name">NAME</string>
    <string name="sends">SENDINGS</string>

    <!-- item_topuser -->
    <string name="n_top" translatable="false">1</string>
    <string name="n_sends" translatable="false">12</string>
    
    <!-- Server Shared Preferences -->
    <string name="userPreferences" translatable="false">userPreferences</string>
    <string name="id_server" translatable="false">idServer</string>
    <string name="serverUrl" translatable="false">serverUrl</string>
    <string name="serverName" translatable="false">serverName</string>
    <string name="serverDesc" translatable="false">serverDesc</string>
    <string name="serverMapsApi" translatable="false">serverMapsApi</string>
    <string name="serverParseApi" translatable="false">serverParseApi</string>
    <string name="serverParseKey" translatable="false">serverParseKey</string>

    <!-- User Shared Preferences -->
    <string name="username" translatable="false">username</string>
    <string name="mail" translatable="false">mail</string>
    <string name="device_id" translatable="false">deviceID</string>
    <string name="token" translatable="false">token</string>
    <string name="idUser" translatable="false">idUser</string>

    <string name="modelPreferences" translatable="false">modelPreferences</string>
    <string name="activeModel" translatable="false">activeModel</string>
    <string name="idImage" translatable="false">idImage</string>
    <string name="isModelLoaded" translatable="false">isModelLoaded</string>
    <string name="currentPhotoPath" translatable="false">currentPhotoPath</string>
    <string name="latModel" translatable="false">latModel</string>
    <string name="lngModel" translatable="false">lngModel</string>

    <string name="isParseInitializated" translatable="false">isParseInitializated</string>

    <!-- item_dictionary -->
    <string name="dic_hint">Select&#8230;</string>
    <string name="dic_name">Name</string>
    <string name="dic_desc">Description</string>

    <!-- Dialog -->
    <string name="dialog_send_tracking">Do you want to send now your route as a contribution or send later?\n\nIf you select later you can synchronize their contributions from the "Synchronize".</string>
    <string name="dialog_init_tracking">Do you want to start recording your route?</string>

    <!-- Camera -->
    <string name="album_name" translatable="false">Cinda</string>

    <!-- Tracking -->
    <string name="title_tracking">Route log</string>
    <string name="tracking">Route</string>
    <string name="idCampaignTracking" translatable="false">idCampaignTracking</string>
    <string name="gpx_send">Contribution sent</string>
    <string name="gpx_not_send">Their contribution could not be sent, try again later from the \"Synchronize\" option.</string>
    <string name="recording_route">Recording route</string>

    <!-- GPX -->
    <string name="base_dir" translatable="false">Cinda</string>
    <string name="gpx_dir_name" translatable="false">gpx</string>

    <!-- Profile -->
    <string name="contributions">Contributions</string>
    <string name="trackings">Routes</string>
    <string name="n_contributions">%d contributions</string>

    <!-- Errors -->
    <string name="userCantOperate">Try again later</string>
    <string name="noID">Model not available</string>

    <!-- Push -->
    <string name="nNotification" translatable="false">nNotification</string>
    <string name="parseDebugChannel" translatable="false">DebugChannel</string>
    <string name="parseProductionChannel" translatable="false">ProductionChannel</string>

    <!-- Test String -->
        <!-- activity_main -->
        <string name="cinda_server" translatable="false"> </string>
        <string name="cinda_server_url" translatable="false"> </string>
        <string name="cinda_server_desc" translatable="false"> </string>

        <!-- item_campaign -->
        <string name="issue_title" translatable="false"> </string>
        <string name="issue_description" translatable="false"> </string>

        <!-- item_campaign_user -->
        <string name="user" translatable="false"> </string>
        <string name="campaign_user_title" translatable="false"> </string>
        <string name="campaign_user_data" translatable="false"> </string>

        <!-- item_campaign_sync -->
        <string name="campaign_sync_title" translatable="false"> </string>
        <string name="campaign_sync_desc" translatable="false"> </string>

        <!-- Server -->
        <string name="urlServer" translatable="false"> </string>

</resources>
