<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        style="@style/text.modelTitle"
        android:text="Medium Text"
        android:id="@+id/textLocation"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/info"
        android:layout_marginEnd="16dp" />

    <TextView
        style="@style/text.modelInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:text="@string/more_info"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:layout_gravity="bottom"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_alignBottom="@+id/textLocation"
        android:tint="@color/infoImage"
        android:clickable="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/mapLocation"
        android:layout_below="@+id/textLocation"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:background="@color/backImage"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feedback"
        android:orientation="vertical"
        android:layout_alignTop="@+id/mapLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/imgLocation"
            android:src="@drawable/ic_location_on_black_48dp"
            android:contentDescription="@string/app_name"
            android:layout_weight="1"
            android:tint="@color/primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/selectLocation"
            android:id="@+id/textSelectLocation"
            android:layout_weight="1"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/separator"
        android:background="@color/model_separator"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/mapLocation" />

</RelativeLayout>