<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="64dp"
        android:id="@+id/imgUser"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/test_logo_si2"
        android:scaleType="centerCrop"
        android:paddingBottom="16dp"
        android:contentDescription="@string/app_name"/>

    <TextView
        style="@style/campaign.userTitle"
        android:text="@string/campaign_sync_title"
        android:id="@+id/title"
        android:layout_alignTop="@+id/imgUser"
        android:layout_toEndOf="@+id/imgUser"
        android:layout_toRightOf="@+id/imgUser"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_toLeftOf="@+id/isSync"
        android:layout_toStartOf="@+id/isSync" />

    <TextView
        style="@style/campaign.userData"
        android:text="@string/campaign_sync_desc"
        android:id="@+id/description"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:paddingBottom="16dp"
        android:layout_toLeftOf="@+id/isSync"
        android:layout_toStartOf="@+id/isSync" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/separator"
        android:background="@color/primary"
        android:layout_below="@+id/imgUser" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/isSync"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_done_black_24dp"
        android:padding="12dp"
        android:tint="@color/primary"
        android:contentDescription="@string/app_name"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/syncProgressBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:indeterminate="true"
        android:padding="8dp"
        android:visibility="gone" />

</RelativeLayout>